--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@ con mi vida, tal vez un modulo o ir a la uni. Me gusta salir de fiesta y escucha
 </p> <a href= "file:///D:/Nueva%20carpeta/yung%20beef.html"> Tarea 7 </a> </p> 
 <p> <h2> Web Hosting </h2> </p> 
 <p> El alojamiento web (en inglés web hosting) es el servicio que provee a los usuarios de Internet un sistema para poder almacenar información, imágenes, vídeo, o cualquier contenido accesible vía web. Es una analogía de «hospedaje o alojamiento en hoteles o habitaciones» donde uno ocupa un lugar específico, en este caso la analogía alojamiento web o alojamiento de páginas web, se refiere al lugar que ocupa una página web, sitio web, sistema, correo electrónico, archivos etc. en internet o más específicamente en un servidor que por lo general hospeda varias aplicaciones o páginas web. </p>
+  </body> 
