--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <title> TAREA FINAL </title>  
 </head> 
 
-<body> <h1>  Mi trabajo en TICII Marta Cartón Menéndez </h1>
+<body> 
+  <h1>  Mi trabajo en TICII Marta Cartón Menéndez </h1>
 <p> Me llamo Marta, estoy en segundo de bachillerato en ciencias de la salud. Cuando termine bachiller no se que hare
 con mi vida, tal vez un modulo o ir a la uni. Me gusta salir de fiesta y escuchar musica.</p>
 <h2> Mis ejercicios introducción html <h2>
@@ -18,3 +19,4 @@ con mi vida, tal vez un modulo o ir a la uni. Me gusta salir de fiesta y escucha
 <p> <h2> Web Hosting </h2> </p> 
 <p> El alojamiento web (en inglés web hosting) es el servicio que provee a los usuarios de Internet un sistema para poder almacenar información, imágenes, vídeo, o cualquier contenido accesible vía web. Es una analogía de «hospedaje o alojamiento en hoteles o habitaciones» donde uno ocupa un lugar específico, en este caso la analogía alojamiento web o alojamiento de páginas web, se refiere al lugar que ocupa una página web, sitio web, sistema, correo electrónico, archivos etc. en internet o más específicamente en un servidor que por lo general hospeda varias aplicaciones o páginas web. </p>
   </body> 
+</html>
