--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p> Me llamo Marta, estoy en segundo de bachillerato en ciencias de la salud. Cuando termine bachiller no se que hare
 con mi vida, tal vez un modulo o ir a la uni. Me gusta salir de fiesta y escuchar musica.</p>
 <h2> Mis ejercicios introducción html <h2>
-<p> <a href= "file:///C:/Users/Aramo/Desktop/ejercicos_html/html-ejerc1-intro.html"> Tarea 1 </a> </p>
+<p> <a href= "Marta Tic/html-ejerc1-intro.html"> Tarea 1 </a> </p>
 <p> <a href= " file:///D:/Nueva%20carpeta/poema.html "> Tarea 2 </a> </p>
 <p> <a href= "file:///D:/Nueva%20carpeta/web%202.0.html "> Tarea 3 y 4 </a> </p>
 <p> <a href= "file:///D:/Downloads/html-ejerc6.html"> Tarea 5 y 6 </a> </p>
