--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ con mi vida, tal vez un modulo o ir a la uni. Me gusta salir de fiesta y escucha
 <h2> Mis ejercicios introducción html <h2>
 <ul> 
 <li><p> <a href= "Marta Tic/html-ejerc1-intro.html"> Tarea 1 </a> </li>
-<li> <a href= " Marta Tic/html-ejerc2-poema.html "> Tarea 2 </a> </li>
-<li> <a href= "file:///D:/Nueva%20carpeta/web%202.0.html "> Tarea 3 y 4 </a> </li>
-<p> <a href= "file:///D:/Downloads/html-ejerc6.html"> Tarea 5 y 6 </a> </p>
-</p> <a href= "file:///D:/Nueva%20carpeta/yung%20beef.html"> Tarea 7 </a> </p> 
+<li> <a href= "Marta Tic/html-ejerc2-poema.html"> Tarea 2 </a> </li>
+<li> <a href= "Marta Tic/html-ejerc3y4-Web2.0.html"> Tarea 3 y 4 </a> </li>
+  <li> <a href= "Marta Tic/html-ejerc5.html"> Tarea 5 y 6 </a> </li>
+  <li> <a href= "Marta Tic/html-ejerc6.html"> Tarea 7 </a> </li>
 <p> <h2> Web Hosting </h2> </p> 
 <p> El alojamiento web (en inglés web hosting) es el servicio que provee a los usuarios de Internet un sistema para poder almacenar información, imágenes, vídeo, o cualquier contenido accesible vía web. Es una analogía de «hospedaje o alojamiento en hoteles o habitaciones» donde uno ocupa un lugar específico, en este caso la analogía alojamiento web o alojamiento de páginas web, se refiere al lugar que ocupa una página web, sitio web, sistema, correo electrónico, archivos etc. en internet o más específicamente en un servidor que por lo general hospeda varias aplicaciones o páginas web. </p>
   </body> 
