--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ con mi vida, tal vez un modulo o ir a la uni. Me gusta salir de fiesta y escucha
 <ul> 
 <li> <a href= "Marta Tic/html-ejerc1-intro.html"> Tarea 1 </a> </li>
 <li> <a href= "Marta Tic/html-ejerc2-poema.html"> Tarea 2 </a> </li>
-<li> <a href= "Marta Tic/html-ejerc3y4-Web2.0.html"> Tarea 3 y 4 </a> </li>
+<li> <a href= "Marta Tic/html-ejerc3y4-web2.0.html"> Tarea 3 y 4 </a> </li>
   <li> <a href= "Marta Tic/html-ejerc5.html"> Tarea 5  </a> </li>
   <li> <a href= "Marta Tic/html-ejerc6.html"> Tarea 6 </a> </li>
   <li> <a href= "Marta Tic/html-ejerc7.html"> Tarea 7 </a> </li>
