--- a/index.html
+++ b/index.html
@@ -4,22 +4,47 @@
 <head> 
 <meta charset=”utf-8”> 
 <title> TAREA FINAL </title>  
+ <link href="style.css" rel="stylesheet" type="text/css" />
+
 </head> 
 
-<body> 
+<body>
+  <div id="hola"> 
   <h1>  Mi trabajo en TICII Marta Cartón Menéndez </h1>
-<p> Me llamo Marta, estoy en segundo de bachillerato en ciencias de la salud. Cuando termine bachiller no se que hare
-con mi vida, tal vez un modulo o ir a la uni. Me gusta salir de fiesta y escuchar musica.</p>
+<p id="p1"> Me llamo Marta, estoy en segundo de bachillerato en ciencias de la salud. Cuando termine bachiller no se que hare
+con mi vida, tal vez un modulo o ir a la universidad. Me gusta salir de fiesta y escuchar musica.</p>
+<img class="centrar" src="https://img.wattpad.com/dc7eb40f63fa6ad373ff0cace5f9bc101f32ca07/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f7554437867567271716e655f42673d3d2d31392e313538653237326234666466613438363831333936373535363431332e6a7067?s=fit&w=720&h=720"alt="Yung Beef" width= "300">
+
+  
+  </div>
+  <div id="adios"> 
 <h2> Mis ejercicios introducción html <h2>
 <ul> 
 <li> <a href= "Marta Tic/html-ejerc1-intro.html"> Tarea 1 </a> </li>
-<li> <a href= "Marta Tic/html-ejerc2-poema.html"> Tarea 2 </a> </li>
-<li> <a href= "Marta Tic/html-ejerc3y4-web2.0.html"> Tarea 3 y 4 </a> </li>
+<li> <a href= "Marta Tic/html-ejerc2-poema.html"> Tarea 2</a> </li>
+<li> <a href= "Marta Tic/html-ejerc3y4-web2.0.html"> Tarea 3 y 4</a> </li>
   <li> <a href= "Marta Tic/html-ejerc5.html"> Tarea 5  </a> </li>
   <li> <a href= "Marta Tic/html-ejerc6.html"> Tarea 6 </a> </li>
   <li> <a href= "Marta Tic/html-ejerc7.html"> Tarea 7 </a> </li>
   </ul>
+  </div>
+  </div>
+  <div id="arbol"> 
+<h2> Mis ejercicios de introducción a CSS<h2>
+<ul> 
+<li> <a href= "https://ejerc-10html.martactic.repl.co"> Tarea 10 </a> </li>
+<li> <a href= "https://ejerc-11html.martactic.repl.co"> Tarea 11 </a> </li>
+<li> <a href= "https://ejerc-12.martactic.repl.co"> Tarea 12 </a> </li>
+  <li> <a href= "https://ejerc-13.martactic.repl.co"> Tarea 13  </a> </li>
+  <li> <a href= "https://ejerc-14.martactic.repl.co"> Tarea 14 </a> </li>
+  <li> <a href= "https://ejerc-15.martactic.repl.co"> Tarea 15 </a>  </li>
+  <li> <a href= "https://ejerc-16.martactic.repl.co"> Tarea 16 </a>  </li>
+  </ul>
+  </div>
+   
+   <div id="flor"> 
 <p> <h2> Web Hosting </h2> </p> 
-<p> El alojamiento web (en inglés web hosting) es el servicio que provee a los usuarios de Internet un sistema para poder almacenar información, imágenes, vídeo, o cualquier contenido accesible vía web. Es una analogía de «hospedaje o alojamiento en hoteles o habitaciones» donde uno ocupa un lugar específico, en este caso la analogía alojamiento web o alojamiento de páginas web, se refiere al lugar que ocupa una página web, sitio web, sistema, correo electrónico, archivos etc. en internet o más específicamente en un servidor que por lo general hospeda varias aplicaciones o páginas web. </p>
+<p id="p2"> El alojamiento web (en inglés web hosting) es el servicio que provee a los usuarios de Internet un sistema para poder almacenar información, imágenes, vídeo, o cualquier contenido accesible vía web. Es una analogía de «hospedaje o alojamiento en hoteles o habitaciones» donde uno ocupa un lugar específico, en este caso la analogía alojamiento web o alojamiento de páginas web, se refiere al lugar que ocupa una página web, sitio web, sistema, correo electrónico, archivos etc. en internet o más específicamente en un servidor que por lo general hospeda varias aplicaciones o páginas web. </p>
+   </div>
   </body> 
 </html>
